# instagram-stats

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  celerybeat-schedule.dir  docker-compose.yaml  instagram_session.json  manage.py  pyproject.toml  pytest.ini  requirements.txt  utils.py
common/tests/: conftest.py
default_auth/: apps.py  forms.py  urls.py  views.py
default_auth/templates/: base.html
default_auth/templates/default_auth/: signup.html
default_auth/tests/test_forms/: test_login_form.py  test_signup_form.py
default_auth/tests/test_views/: test_login_view.py  (+3 more)
influencers/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
influencers/migrations/: 0001_initial.py
influencers_statistic/: admin.py  apps.py  enums.py  models.py  statistics_services.py  tasks.py  urls.py  views.py
influencers_statistic/migrations/: 0001_initial.py  0002_alter_statistics_managers.py  0003_alter_statistics_managers.py
influencers_statistic/templatetags/: influencers_statistic_tags.py
influencers_statistic/tests/: test_update_statistic_task.py
meta_statistic/: .env  .gitignore  Dockerfile  asgi.py  celery.py  manage.py  requirements.txt  settings.py  urls.py  utils.py  wsgi.py
meta_statistic/default_auth/: apps.py  forms.py  urls.py  views.py
meta_statistic/influencers/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
meta_statistic/influencers_statistic/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
meta_statistic/meta_statistic/: celery.py  settings.py  urls.py
(+28 files in other folders)
